styles/style.css
.header {
  display: grid;
  grid-template-columns: 14fr 11fr 8fr;
  justify-items: start;
  align-items: center;
  margin: 92px 24px 96px;
  padding: 0 26px;
}

.header__menu {
  max-width: 392px;
}

.header__links-list {
  display: flex;
  justify-content: space-between;
  gap: 10px;
  list-style-position: inside;
  list-style-type: circle;
}

.header__links-list-item {
  font-size: 18px;
}

.header__links-list-item_no-bullit {
  list-style-type: none;
}

.header__links-list-item a {
  border-bottom: 1px solid #000;
  text-decoration: none;
}

.header__links-list-item_no-bullit a {
  border-bottom: none;
}

.header__logo {
  display: block;
  width: 148px;
}

.header__logo-image {
  height: 105px;
}

.address {
  max-width: 240px;
  font-size: 18px;
  font-style: normal;
  line-height: 1.35;
}

.address a {
  border-bottom: 1px solid #000;
  text-decoration: none;
}

.cover {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 147px;
  padding: 165px 50px 51px;
  color: #fff;
  background-image: url(../images/cover.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.cover__title {
  z-index: 1;
  font-size: 100px;
  line-height: 1.15;
}

.aligned-text {
  display: block;
}

.aligned-text_center {
  line-height: 1;
  text-align: center;
}

.aligned-text_right {
  line-height: 1;
  text-align: right;
}

.letter-spacing-extended {
  letter-spacing: 0.6em;
}

.no-letter-spacing {
  letter-spacing: 0;
}

.cover__description {
  z-index: 1;
  display: flex;
  justify-content: space-between;
}

.cover__description-text {
  font-size: 22px;
  line-height: 28px;
}

.bet-button {
  border: 1px solid #fff;
  padding: 12px 32px 11px 31px;
  color: #fff;
  font-family: Raleway, sans-serif;
  font-weight: 500;
  font-size: 22px;
  line-height: 25.83px;
  background-color: transparent;
}

.overlay {
  position: absolute;
  inset: 0;
  background-color: rgb(0 0 0 / 0.6);
}

